test/expected/explain_+dtor-error.out
explain X::~C()
        ^
9: error: matching class name after '~' expected
